# terrarium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PUBLISHING.md  README.md  SECURITY.md
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: event-boundary.md
treehouse/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
treehouse/examples/: breakpoint_demo.py  breakpoint_stepping.py  chatbot_with_tools.py  llm_agent.py  streaming_agent.py  test_ollama.py  visualize_trace.py
treehouse/src/treehouse/: __init__.py  debugger.py  debugging.py  metrics.py  telemetry.py  visualization.py
treehouse/src/treehouse/llm/: __init__.py  mock_provider.py  nodes.py  ollama_provider.py  provider.py
treehouse/src/treehouse/visualizer/: __init__.py  server.py  storage.py
treehouse/src/treehouse/visualizer/static/: index.html
treehouse/tests/: __init__.py  test_debugger.py  test_debugging.py  test_llm_nodes.py  test_llm_provider.py  test_metrics.py  test_ollama_provider.py  test_storage.py  test_telemetry.py  test_visualization.py  test_visualizer_server.py
vivarium/: .gitignore  Makefile  README.md  main.py  node.py  pyproject.toml  pytest.ini
vivarium/core/: __init__.py  actions.py  composites.py  conditions.py  state.py  tree.py
vivarium/examples/: combat_ai.py
vivarium/src/vivarium/: __init__.py  actions.py  conditions.py
vivarium/src/vivarium/core/: __init__.py  actions.py  composites.py  conditions.py  context.py  decorators.py  events.py  node.py  status.py  tree.py
vivarium/tests/: __init__.py  helpers.py  test_actions.py  test_composites.py  test_conditions.py  test_context.py  test_decorators.py  test_events.py  test_examples.py  test_node.py  test_state.py  test_tree.py
