[project]
name = "terrarium-treehouse"
version = "0.1.0"
description = "Treehouse is an external observability and interpretability tool for behavior-tree-driven agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
authors = [
    {name = "Ricardo Kirkner", email = "ricardo@kirkner.com.ar"}
]
dependencies = [
    "terrarium-vivarium",
]

[project.optional-dependencies]
visualizer = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
]

[tool.uv.sources]
terrarium-vivarium = { path = "../vivarium" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treehouse"]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '\.git|\.venv|build|dist'

[tool.ruff]
line-length = 88
exclude = ["build", "dist", ".venv", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
  "black>=26.1.0",
  "build>=1.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.25.0",
  "pytest-coverage>=0.0",
  "pytest-watch>=4.2.0",
  "ruff>=0.14.14",
  "twine>=5.0.0",
  "uvicorn>=0.34.0",
]
