[project]
name = "terrarium-vivarium"
version = "0.1.1"
description = "Vivarium is a behavior tree execution environment"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
dependencies = []
authors = [
    {name = "Ricardo Kirkner", email = "ricardo@kirkner.com.ar"}
]

[project.urls]
Homepage = "https://github.com/ricardokirkner/terrarium"
Documentation = "https://github.com/ricardokirkner/terrarium/tree/main/docs"
Repository = "https://github.com/ricardokirkner/terrarium.git"
Issues = "https://github.com/ricardokirkner/terrarium/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vivarium"]

[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '\.git|\.venv|build|dist'

[tool.ruff]
line-length = 88
exclude = ["build", "dist", ".venv", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
  "black>=26.1.0",
  "build>=1.0.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-coverage>=0.0",
  "pytest-watch>=4.2.0",
  "ruff>=0.14.14",
  "twine>=5.0.0",
]
